[metadata]
name = blume
version = 0.2
author = Johnny Gill
author_email = swfiua@gmail.com
description = Better looking tables for matplotlib
long_description = file: README.rst
url = https://github.com/swfiua/blume
project_urls =
    Bug Tracker = https://github.com/swfiua/blume/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =blume
packages = find:
python_requires = >=3.6

[options.packages.find]
where = blume
